--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 
-group 'com.jbee.book'
+group 'com.jbee'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
