--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,13 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+
     implementation('org.projectlombok:lombok')
+
+    implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    implementation('com.h2database:h2')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
