[머스테치로 화면 구성]  - 글 등록/조회/수정/삭제 기능 구현  (js/css 선언 위치를 다르게 하여 웹 사이트 로딩 속도 향상)  - 웹 요청에서의 테스트 코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     testImplementation('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
+
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 }
