--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'io.spring.dependency-management'
 
 
 group 'com.jbee'
-version '1.0-SNAPSHOT'
+version '0.0.2'
 sourceCompatibility = 1.8
 
 repositories {
